# Robotics-Projects-2024-2025

./: README.md  first_task.launch  map.yaml  odom_to_tf.cpp
First Project/first_project/: CMakeLists.txt
First Project/first_project/launch/: launch.launch
First Project/first_project/msg/: Sector_time.msg
First Project/first_project/rviz/: cfg.rviz
First Project/first_project/src/: gps_odometer.cpp  gps_to_odom.cpp  odometer.cpp  sector_times.cpp
Second Project/: package.xml
Second Project/second_project/: CMakeLists.txt  package.xml
Second Project/second_project/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Second Project/second_project/csv/: goals.csv
Second Project/second_project/launch/: mapping.launch  navigation.launch
Second Project/second_project/rviz/: config_1.rviz  config_2.rviz
Second Project/second_project/src/: combine_laserscan.cpp  odom_to_tf.cpp  send_goals_from_csv.cpp  static_tf_scan_back.cpp
Second Project/second_project/world/: map.pgm  map.yaml  turtlebot.inc  world.world
first_project/: CMakeLists.txt  package.xml
first_project/launch/: launch.launch
first_project/src/: gps_odometer.cpp  gps_to_odom.cpp
