<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.1</version>
  <description>Robotics: second project</description>

  <maintainer email="mail@example.com">Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>  
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
  </export>
</package>
